@@ -196,14 +196,15 @@ writeViewport (int thingsToWrite)
           break;
 
         case Postscript:
-            /*** Create postscript output for viewport (in axiom3D.ps) ***/
-         fricas_sprintf_to_buf2(PSfilename, "%s%s", viewDirName, "/axiom3D.ps");
+            /*** Create postscript output for viewport (in fricas3D.ps) ***/
+         fricas_sprintf_to_buf2(PSfilename, "%s%s", viewDirName,
+                                "/fricas3D.ps");
          if (PSInit(viewport->viewWindow,viewport->titleWindow) == psError)
            return(-1);
          drawViewport(PSoption);  /* write new script file in /tmp */
          if (PSCreateFile(viewBorderWidth,viewport->viewWindow,
                           viewport->titleWindow, viewport->title) == psError)
-           return(-1);  /* concat script & proc into axiom3D.ps */
+           return(-1);  /* concat script & proc into fricas3D.ps */
          break;
         } /* switch on ii */
       }  /* if thingsToWrite >> ii */
